@@ -1,3 +1,9 @@
+Sat Feb 18 14:32:42 MST 2006  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/conversation-panel.c:
+	* src/fe-gnome/status-bar.c:
+	  - Fix some minor type mismatches
+
 Sat Feb 18 14:25:51 MST 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* src/fe-gnome/preferences-page-irc.c:
